gap fixat

--- a/style.css
+++ b/style.css
@@ -422,12 +422,13 @@ footer {
 
 .footer-container {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto auto auto;
   grid-area: "box1 box2 box3";
-  padding: 10px;
-  gap:30px;
+  padding: 20px;
+  gap:50px 50px;
   font-size:12px;
+  width: 900px;
 
 }
 
